--- a/app/src/styles/AuthStyle.css
+++ b/app/src/styles/AuthStyle.css
@@ -848,3 +848,31 @@ button.signin-btn:hover {
     font-size: 0.8em;
   }
 }
+
+/* Navbar */
+
+.sidebar .language {
+  display: none;
+}
+.sidebar.active .language {
+  position: absolute;
+  color: var(--white);
+  bottom: 70px;
+  left: 0;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+.sidebar.active .Flag {
+  width: 30px;
+  height: 20px;
+  cursor: pointer;
+  transition: all 0.5s ease;
+}
+#Magyar {
+  margin-right: 10px;
+}
+#Szerb {
+  margin-left: 10px;
+}
