--- a/app/src/styles/GlobalStyle.css
+++ b/app/src/styles/GlobalStyle.css
@@ -1,7 +1,7 @@
 .MainLayout {
-    display: flex;
-    justify-content: space-around;
-    height: 100%;
-    width: 100%;
-    /* background-color: #3AB4F2; */
-  }
+  /* display: flex; */
+  justify-content: space-around;
+  height: 100%;
+  width: 100%;
+  /* background-color: #3AB4F2; */
+}
